[project]
name = "ace-tools-lite"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Zankevich",email = "zancudero@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
